<resources>
    <string name="app_name" translatable="false">Budgetracker</string>
    <string name="balance_for">Balance for %s</string>
    <string name="main_incomes_text">Incomes:</string>
    <string name="main_expenses_text">Expenses:</string>
    <string name="main_total_text">Total:</string>
    <string name="last_incomes">Last incomes</string>
    <string name="last_expenses">Last expenses</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="overview">Overview</string>
    <string name="reports">Reports</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>
    <string name="new_income">New income</string>
    <string name="value">Value</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="network_error">Network error</string>
    <string name="sing_up">Sing Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="send_confirmation_email">Send Confirmation Email</string>
    <string name="confirm_email_message">Confirmation email was sent. Please, confirm your email address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="ok">OK</string>
    <string name="confirm_email_title">Confirm email</string>
    <string name="reset_password_title">Password was reset</string>
    <string name="reset_password_message">Your password was reset. New password was sent to your email</string>
    <string name="reset_password_question_title">Reset your password?</string>
    <string name="reset_password_question_message">Do you want to reset your password?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password"><![CDATA[Invalid password. It must contain 8–32 characters: a–z, A–Z, 0–9, and one of @$!%*#?& symbols]]></string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_failed_message">Cannot connect to the server. Check your Internet connection</string>
    <string name="email_is_used">Email is already used</string>
    <string name="incorrect_email_password">Incorrect email or password</string>
    <string name="confirm_email_error_title">Email is not confirmed</string>
    <string name="confirm_email_error_message">Your email is not confirmed</string>
    <string name="confirm_email_error_message_with_question">Your email is not confirmed. Do you want to confirm it?</string>
    <string name="email_confirmed_title">Email already confirmed</string>
    <string name="email_confirmed_message">Your email is already confirmed</string>
    <string name="no_last_incomes">No last incomes</string>
    <string name="no_last_expenses">No last expenses</string>
    <string name="error">Error</string>
    <string name="my_profile">My profile</string>
    <string name="log_out">Log out</string>
    <string name="accounts">Accounts</string>
    <string name="category_report">Category report</string>
    <string name="time_report">Time report</string>
    <string name="pdf_report">PDF report</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="from_optional">From (optional)</string>
    <string name="note">Note</string>
    <string name="note_optional">Note (optional)</string>
    <string name="invalid_value">Value cannot be 0</string>
    <string name="no_accounts">You don\'t have any accounts. You need to create one</string>
    <string name="invalid_account">Account cannot be blank</string>
    <string name="invalid_category">Category cannot be blank</string>
    <string name="invalid_date">Date cannot be null</string>
    <string name="transaction_is_added">Transaction is added</string>
    <string name="to">To</string>
    <string name="to_optional">To (optional)</string>
    <string name="change_password">Change password</string>
    <string name="reset_password">Reset password</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="no_email">No email address found</string>
    <string name="new_password">New password</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_new_password"><![CDATA[Invalid new password. It must contain 8–32 characters: a–z, A–Z, 0–9, and one of @$!%*#?& symbols]]></string>
    <string name="password_was_changed">Password was changed</string>
    <string name="delete_all_data_question_title">Delete all data?</string>
    <string name="delete_all_data_question_message">Do you really want to delete all data (accounts, transactions, profile)?</string>
    <string name="data_was_deleted">Data was deleted</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="refresh">Refresh</string>
    <string name="add_account">Add account</string>
    <string name="account_details">Account details</string>
    <string name="account_name">Account name</string>
    <string name="total">Total</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="users">Users</string>
    <string name="delete_account">Delete account</string>
    <string name="you_do_not_have_any_accounts">You do not have any accounts</string>
    <string name="invalid_account_id">Invalid account ID</string>
    <string name="invalid_account_name">Account name has to be unique</string>
    <string name="create_account">Create new account</string>
    <string name="account_was_created">Account was created</string>
    <string name="account_was_updated">Account was updated</string>
    <string name="account_was_deleted">Account was deleted</string>
    <string name="delete_account_question">Delete account?</string>
    <string name="delete_account_question_message">Do you want to delete this account and its transactions?</string>
    <string name="invalid_account_data">Name of account must be unique and users with theirs emails must exist</string>
    <string name="transaction_details">Transaction details</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="no_transactions">No transactions</string>
    <string name="invalid_transaction_id">Invalid transaction id</string>
    <string name="delete_transaction_question">Delete transaction?</string>
    <string name="delete_transaction_question_message">Do you want to delete this transaction?</string>
    <string name="transaction_is_updated">Transaction is updated</string>
    <string name="transaction_is_deleted">Transaction is deleted</string>
    <string name="invalid_user_email">User already have account with this name</string>
    <string name="type">Type</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="show_report">Show report</string>
    <string name="all">All</string>
    <string name="invalid_transaction_type">Transaction type cannot be blank</string>
    <string name="date_range">Date range</string>
    <string name="invalid_dates">Dates cannot be null</string>
    <string name="select_all">Select all</string>
    <string name="period">Period</string>
    <string name="invalid_period">Period cannot be blank</string>
    <string name="download_report">Download report</string>
    <string name="report_for">Report for %s</string>
    <string name="last_transactions">Last transactions</string>
    <string name="report_name" translatable="false">Report_%s</string>
    <string name="report_saved_successful">Report was saved to Downloads</string>
    <string name="report_saved_fail">Failed to save report</string>
    <string name="transaction_type_by_categories">%s by categories</string>
    <string name="transaction_type_by_date">%s by date</string>
    <string name="pdf_report_file_name" translatable="false">Report_%s.pdf</string>
    <string name="currency">Currency</string>
    <string name="date_format">Date format</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="set_time">Set time</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="delete_data">Delete data</string>
    <string name="support_and_feedback">Support and feedback</string>
    <string name="daily_reminder_title">Add new transactions</string>
    <string name="daily_reminder_message">Don\'t forget to add new transactions today</string>
    <string name="invalid_currency">Currency cannot be blank</string>
    <string name="invalid_date_format">Date format cannot be blank</string>
    <string name="support_and_feedback_message">For support and feedback write to this email: trykoshivan4@gmail.com</string>
    <string name="delete_data_question_title">Delete data?</string>
    <string name="delete_data_question_message">Do you really want to delete all accounts and transactions?</string>
    <string name="all_data_was_deleted">All data was deleted</string>
    <string name="any_problems_question">Any problems?</string>
    <string name="any_problems_message">Dou you have any problems? Please, contact me: trykoshivan4@gmail.com</string>
    <string name="input_password">Input password</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter by</string>
    <string name="sort_by">Sort by</string>
    <string name="date_and_value">Selected date: %s, Value: %s</string>

    <string-array name="income_categories">
        <item>Financial income</item>
        <item>Salary</item>
        <item>Odd jobs</item>
        <item>Pension</item>
        <item>Personal savings</item>
        <item>Other income</item>
    </string-array>

    <string-array name="expense_categories">
        <item>Food/Drinks</item>
        <item>Shopping</item>
        <item>Transportation</item>
        <item>Entertainment</item>
        <item>Home</item>
        <item>Family</item>
        <item>Health/Sport</item>
        <item>Pets</item>
        <item>Travels</item>
        <item>Other expenses</item>
    </string-array>
    
    <string-array name="transaction_types">
        <item>All</item>
        <item>Incomes</item>
        <item>Expenses</item>
    </string-array>

    <string-array name="period_types">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

</resources>