<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:id="@+id/dialog_account_details">

    <TextView
        android:id="@+id/account_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_details"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_details_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/account_name"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/outline_drive_file_rename_outline_24"
        app:layout_constraintTop_toBottomOf="@id/account_details_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_details_input_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="25"
            tools:text="My wallet" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/account_details_incomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incomes"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_details_input_name"/>

    <TextView
        android:id="@+id/account_details_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_details_incomes"/>

    <TextView
        android:id="@+id/account_details_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_details_expenses"/>

    <TextView
        android:id="@+id/account_details_incomes_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$200"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_details_input_name"/>

    <TextView
        android:id="@+id/account_details_expenses_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="-$100"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_details_incomes_value"/>

    <TextView
        android:id="@+id/account_details_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$100"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_details_expenses"/>

    <Button
        android:id="@+id/account_details_button_delete_account"
        android:text="@string/delete_account"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_details_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/account_details_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_details_button_delete_account"
        app:layout_constraintStart_toStartOf="parent"
        android:rowCount="1"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/account_details_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:layout_columnWeight="1" />

        <Button
            android:id="@+id/account_details_button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/ok"
            android:layout_columnWeight="1"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>