<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:id="@+id/dialog_change_password">

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_text_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/change_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/outline_password_24"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:errorIconDrawable="@null"
        app:endIconMode="password_toggle"
        app:errorEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_edit_text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_text_input_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@+id/change_password_text_input_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/outline_password_24"
        android:layout_marginHorizontal="20dp"
        app:errorIconDrawable="@null"
        app:endIconMode="password_toggle"
        app:errorEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_edit_text_input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:id="@+id/change_password_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change_password_text_input_new_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:rowCount="1"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/change_password_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:layout_columnWeight="1" />

        <Button
            android:id="@+id/change_password_button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/ok"
            android:layout_columnWeight="1"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>